--- a/Storage/Views/Shared/_Layout.cshtml
+++ b/Storage/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Storage</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Products" asp-action="Inventory">Inventory</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
